--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="./feed.xml" title="Vitalik Buterin's website">
+<link rel="alternate" type="application/rss+xml" href="./feed.xml" title="Daniel Ratmiroff">
 
 
 
@@ -52,13 +52,13 @@ MathJax = {
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Vitalik Buterin's website" />
+<meta name="twitter:title" content="Daniel Ratmiroff" />
 <meta name="twitter:image" content="http://vitalik.ca/images/icon.png" />
 
 
-<title> Vitalik Buterin's website </title>
+<title> Daniel Ratmiroff </title>
 <br>
-<center><h1 style="border-bottom:0px"> Vitalik Buterin's website </h1></center>
+<center><h1 style="border-bottom:0px"> Daniel Ratmiroff </h1></center>
 
 <center><hr>
 <span class="toc-category" style="font-size:100%"><a href="./categories/general.html">General</a></span>
