--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,7 @@ MathJax = {
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Daniel Ratmiroff" />
-<meta name="twitter:image" content="http://vitalik.ca/images/icon.png" />
+<meta name="twitter:image" content="https://danielratmiroff.com/images/logo.png" />
 
 
 <title> Daniel Ratmiroff </title>
